Remove several z-index and relative positioning styles; no longer necessary and messing up Internet Explorer 7 and below.

--- a/app/assets/stylesheets/desktop/_home.sass
+++ b/app/assets/stylesheets/desktop/_home.sass
@@ -267,7 +267,6 @@
   position: relative
   padding: $padding-4 0
   background-color: $white
-  z-index: -1
 
   +at-breakpoint($break6)
     padding: $padding-6 0
@@ -479,7 +478,6 @@
   padding:  $padding-4 0
   padding-bottom: $padding-4
   background-color: $white
-  z-index: -1
 
   +at-breakpoint($break6)
     padding:  $padding-6 0
