--- a/app/assets/stylesheets/mobile/_home.sass
+++ b/app/assets/stylesheets/mobile/_home.sass
@@ -150,7 +150,6 @@
   position: relative
   padding: $padding-4 0
   background-color: $white
-  z-index: -1
 
   +at-breakpoint($break6)
     padding: $padding-6 0
@@ -263,7 +262,6 @@
   padding:  $padding-4 0
   padding-bottom: $padding-4
   background-color: $white
-  z-index: -1
 
   +at-breakpoint($break6)
     padding:  $padding-6 0
