--- a/app/assets/stylesheets/mobile/_layout.sass
+++ b/app/assets/stylesheets/mobile/_layout.sass
@@ -15,21 +15,13 @@ html, button, input, select, textarea
   color: $base-font-color
 
 body
-  position: relative
   font-size: $base-font-size
   line-height: $base-line-height
   background-color: $bg-body
-  z-index: -5613201117
 
 .wrapper
-  position: relative
   margin: 0 auto
   overflow: hidden
-  z-index: -5613201115
-
-#main
-  position: relative
-  z-index: -1000000
 
 .container
   +container($total-columns, $break6)
